:thought_balloon: changed greeting message & tweaked style a bit

--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Confess-in</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fontbit.io" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Prompt&display=swap"
+      href="https://fontbit.io/css2?family=Prompt&display=swap"
       rel="stylesheet"
     />
 
     <meta
       name="description"
-      content="Confess unek-unek kamu tentang Suluh secara rahasia disini!"
+      content="Confess-in unek-unek kamu tentang aku secara rahasia disini!"
     />
     <meta name="author" content="Suluh S" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <meta property="og:site_name" content="Confess-in" />
     <meta property="og:type" content="website" />
   </head>
