:eyes: showing reply message (children)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Confess-in</title>
+    <title>Confess</title>
 
     <link rel="preconnect" href="https://fontbit.io" />
     <link
@@ -14,10 +14,10 @@
 
     <meta
       name="description"
-      content="Confess-in unek-unek kamu tentang aku secara rahasia disini!"
+      content="Sampein unek-unek kamu tentang aku secara rahasia disini!"
     />
     <meta name="author" content="Suluh S" />
-    <meta property="og:site_name" content="Confess-in" />
+    <meta property="og:site_name" content="Confess" />
     <meta property="og:type" content="website" />
   </head>
 
