:bar_chart: integrate with umami

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <meta name="author" content="Suluh S" />
     <meta property="og:site_name" content="Confess" />
     <meta property="og:type" content="website" />
+
+    <script
+      async
+      defer
+      data-website-id="f499ecec-c0e4-4e13-8b97-a1e17ba93d34"
+      src="https://nyatet.sesulih.my.id/tukang.js"
+    ></script>
   </head>
 
   <body>
