--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
 
     <link rel="preconnect" href="https://fontbit.io" />
     <link
+      rel="preload"
       href="https://fontbit.io/css2?family=Prompt&display=swap"
-      rel="stylesheet"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fontbit.io/css2?family=Prompt&display=swap"
+      />
+    </noscript>
 
     <meta
       name="description"
@@ -19,6 +27,46 @@
     <meta name="author" content="Suluh S" />
     <meta property="og:site_name" content="Confess" />
     <meta property="og:type" content="website" />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="194x194"
+      href="/assets/favicon-194x194.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/assets/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon-16x16.png"
+    />
+    <link
+      rel="mask-icon"
+      href="/assets/safari-pinned-tab.svg"
+      color="#ea2d49"
+    />
+    <meta name="apple-mobile-web-app-title" content="Confess ke Suluh" />
+    <meta name="application-name" content="Confess ke Suluh" />
+    <meta name="msapplication-TileColor" content="#ea2d49" />
+    <meta name="msapplication-TileImage" content="/assets/mstile-144x144.png" />
+    <meta name="theme-color" content="#ea2d49" />
 
     <script
       async
