:signal_strength: add offline support to workbox

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Confess</title>
 
-    <link rel="preconnect" href="https://fontbit.io" />
+    <link rel="dns-prefetch" href="https://fontbit.io" />
+    <link rel="preconnect" crossorigin="anonymous" href="https://fontbit.io" />
     <link
       rel="preload"
+      crossorigin="anonymous"
       href="https://fontbit.io/css2?family=Prompt&display=swap"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
@@ -16,6 +18,7 @@
     <noscript>
       <link
         rel="stylesheet"
+        crossorigin="anonymous"
         href="https://fontbit.io/css2?family=Prompt&display=swap"
       />
     </noscript>
