:small_airplane: updating site title and description
readjust database structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Confess</title>
+    <title>Kirim Pesan Rahasia ke Suluh</title>
 
     <link rel="dns-prefetch" href="https://fontbit.io" />
     <link rel="preconnect" crossorigin="anonymous" href="https://fontbit.io" />
@@ -25,10 +25,10 @@
 
     <meta
       name="description"
-      content="Sampein unek-unek kamu tentang aku secara rahasia disini!"
+      content="Sampein aja unek-unek apapun tentang Suluh secara rahasia di sini!"
     />
     <meta name="author" content="Suluh S" />
-    <meta property="og:site_name" content="Confess" />
+    <meta property="og:site_name" content="Kirim Pesan Rahasia ke Suluh" />
     <meta property="og:type" content="website" />
 
     <link
@@ -65,8 +65,8 @@
       href="/assets/safari-pinned-tab.svg"
       color="#ea2d49"
     />
-    <meta name="apple-mobile-web-app-title" content="Confess ke Suluh" />
-    <meta name="application-name" content="Confess ke Suluh" />
+    <meta name="apple-mobile-web-app-title" content="Pesan Untuk Suluh" />
+    <meta name="application-name" content="Pesan Untuk Suluh" />
     <meta name="msapplication-TileColor" content="#ea2d49" />
     <meta name="msapplication-TileImage" content="/assets/mstile-144x144.png" />
     <meta name="theme-color" content="#ea2d49" />
