--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
       rel="preload"
       crossorigin="anonymous"
-      href="https://fontbit.io/css2?family=Prompt&display=swap"
+      href="https://fontbit.io/css?family=Inter:400,500,600,700,800,900&display=swap"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
@@ -19,13 +19,13 @@
       <link
         rel="stylesheet"
         crossorigin="anonymous"
-        href="https://fontbit.io/css2?family=Prompt&display=swap"
+        href="https://fontbit.io/css?family=Inter:400,500,600,700,800,900&display=swap"
       />
     </noscript>
 
     <meta
       name="description"
-      content="Sampein aja unek-unek apapun tentang Suluh secara rahasia di sini!"
+      content="Kirim aja unek-unek kamu, apapun, tentang aku. Curhat? Dipersilahkan :D"
     />
     <meta name="author" content="Suluh S" />
     <meta property="og:site_name" content="Kirim Pesan Rahasia ke Suluh" />
@@ -65,8 +65,8 @@
       href="/assets/safari-pinned-tab.svg"
       color="#ea2d49"
     />
-    <meta name="apple-mobile-web-app-title" content="Pesan Untuk Suluh" />
-    <meta name="application-name" content="Pesan Untuk Suluh" />
+    <meta name="apple-mobile-web-app-title" content="Pesan Buat Suluh <3" />
+    <meta name="application-name" content="Pesan Buat Suluh <3" />
     <meta name="msapplication-TileColor" content="#ea2d49" />
     <meta name="msapplication-TileImage" content="/assets/mstile-144x144.png" />
     <meta name="theme-color" content="#ea2d49" />
