:art: fix typo & change theme color

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
     <link
       rel="mask-icon"
       href="/assets/safari-pinned-tab.svg"
-      color="#ea2d49"
+      color="#ecdbba"
     />
     <meta name="apple-mobile-web-app-title" content="Pesan Buat Suluh <3" />
     <meta name="application-name" content="Pesan Buat Suluh <3" />
-    <meta name="msapplication-TileColor" content="#ea2d49" />
+    <meta name="msapplication-TileColor" content="#ecdbba" />
     <meta name="msapplication-TileImage" content="/assets/mstile-144x144.png" />
-    <meta name="theme-color" content="#ea2d49" />
+    <meta name="theme-color" content="#ecdbba" />
 
     <script
       async
