:pencil: update index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       async
       defer
       data-website-id="f499ecec-c0e4-4e13-8b97-a1e17ba93d34"
-      src="https://nyatet.sesulih.my.id/tukang.js"
+      src="https://analytics.sesulih.my.id/tracker.js"
     ></script>
   </head>
 
