:art: tidy up style in reply timeline
change language in html tag
change app title
increase timeout alert disappear
hide reply list when no reply
display language/text adjustment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
@@ -65,8 +65,8 @@
       href="/assets/safari-pinned-tab.svg"
       color="#ecdbba"
     />
-    <meta name="apple-mobile-web-app-title" content="Pesan Buat Suluh <3" />
-    <meta name="application-name" content="Pesan Buat Suluh <3" />
+    <meta name="apple-mobile-web-app-title" content="🤓 Pesan Buat Suluh" />
+    <meta name="application-name" content="🤓 Pesan Buat Suluh" />
     <meta name="msapplication-TileColor" content="#ecdbba" />
     <meta name="msapplication-TileImage" content="/assets/mstile-144x144.png" />
     <meta name="theme-color" content="#ecdbba" />
