:sparkles: remove birthday & move analytics script to env

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kirim Pesan Rahasia ke Suluh</title>
+    <title>Nasihati Suluh</title>
 
     <link rel="dns-prefetch" href="https://fontbit.io" />
     <link rel="preconnect" crossorigin="anonymous" href="https://fontbit.io" />
@@ -25,10 +25,10 @@
 
     <meta
       name="description"
-      content="Kirim aja unek-unek kamu, apapun, tentang aku. Curhat? Dipersilahkan :D"
+      content="Andai kata seorang muslim tidak memberi nasihat kepada saudaranya kecuali setelah dirinya menjadi orang yang sempurna, niscaya tidak akan ada para pemberi nasihat. (Hasan Al-Bashri)"
     />
     <meta name="author" content="Suluh S" />
-    <meta property="og:site_name" content="Kirim Pesan Rahasia ke Suluh" />
+    <meta property="og:site_name" content="Nasihati Suluh" />
     <meta property="og:type" content="website" />
 
     <link
@@ -65,18 +65,11 @@
       href="/assets/safari-pinned-tab.svg"
       color="#ecdbba"
     />
-    <meta name="apple-mobile-web-app-title" content="🤓 Pesan Buat Suluh" />
-    <meta name="application-name" content="🤓 Pesan Buat Suluh" />
+    <meta name="apple-mobile-web-app-title" content="📝 Nasihati Suluh" />
+    <meta name="application-name" content="📝 Nasihati Suluh" />
     <meta name="msapplication-TileColor" content="#ecdbba" />
     <meta name="msapplication-TileImage" content="/assets/mstile-144x144.png" />
     <meta name="theme-color" content="#ecdbba" />
-
-    <script
-      async
-      defer
-      data-website-id="274f76e3-903c-47d1-8d9f-fd3f6df86f07"
-      src="https://analytics.sesulih.my.id/tracker.js"
-    ></script>
   </head>
 
   <body>
